BUGFIX Allowing overflowing "insert link/image/flash" panel in CMS to scroll (AIR-17)

--- a/css/layout.css
+++ b/css/layout.css
@@ -518,8 +518,7 @@ ul.tree li.Root span.Root span.c a {
 iframe {
 	border: none;
 }
-/* Content Panel Design
- * This is our new right hand pane for inserting images and links etc
+/* Panel for inserting images and links etc
  */
 #contentPanel {
 	background-color: #fff;
@@ -528,9 +527,14 @@ iframe {
 	border: 1px solid #ACBBCC;
 	top: 45px;
 	padding: 0;
-	margin-right: 10px;
-	overflow: hidden;
+	overflow: auto;
+	overflow-x: hidden;
 	font-size: 12px;
+}
+
+#contentPanel form {
+	width: 100%;
+	background: url("../images/textures/obar-18.gif") repeat-x top left;
 }
 
 #contentPanel div,
@@ -538,7 +542,7 @@ iframe {
 	margin-left: 0;
 }
 #contentPanel div.TreeDropdownField {
-	width: 180px;
+	width: 181px;
 }
 #contentPanel div.TreeDropdownField span.items {
 	width: 155px;
@@ -570,10 +574,11 @@ iframe {
 }
 
 #contentPanel fieldset {
-	padding: 5px;
+	padding: 0 5px;
 }
 #contentPanel h2 {
-	margin: -5px -5px 0 -5px;
+	margin: 0 0 5px 0;
+	background: none; /* See '#contentPanel > form' */
 }
 	#contentPanel .thumbnailstrip h2 {
 		font-size: 1.1em;
@@ -594,7 +599,6 @@ iframe {
 	background:#E9E9E9 none repeat scroll 0%;
 	display:block;
 	padding:3px;
-	width:98%;
 }
 #contentPanel input.text {
 	border:1px solid #A7A7A7;
@@ -682,7 +686,7 @@ iframe {
 	border: 2px solid #e4e3e3;
 }
 #contentPanel div.Actions {
-	margin: 2px 5px 0 0;
+	padding: 10px 5px 10px 0;
 	text-align: right;
 }
 #contentPanel #FolderImages a.selectedImage img,
